Prevented infoPins from getting squashed in very low resolutions

--- a/src/components/InfoPins/InfoPins.css
+++ b/src/components/InfoPins/InfoPins.css
@@ -16,7 +16,9 @@
 
 .info-pin {
     height: 10px;
+    min-height: 6px;
     width: 10px;
+    min-width: 6px;
     border-radius: 50%;
     border-width: 1px;
     border-color: black;
@@ -36,17 +38,33 @@
 }
 
 .hole {
+    height: 10px;
+    min-height: 10px;
+    width: 10px;
+    min-width: 10px;
     background-color: hsl(34, 57%, 50%);
 }
 
 .black {
+    height: 10px;
+    min-height: 10px;
+    width: 10px;
+    min-width: 10px;
     background-color: black;
 }
 
 .white {
+    height: 10px;
+    min-height: 10px;
+    width: 10px;
+    min-width: 10px;
     background-color: white;
 }
 .grey {
+    height: 10px;
+    min-height: 10px;
+    width: 10px;
+    min-width: 10px;
     background-color: grey;
 }
 
